--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h2>This First Repository</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam similique voluptatibus aut voluptatum accusamus soluta inventore, in aperiam quisquam obcaecati.</p>
 </body>
 </html>
